doc: format dev-options.md as a man page
The file dev-options.md contains the description for extra
options not useful for sparse itself and its users but well
to sparse's developers and for tools like test-linearize.

Since it's a complement to the main man-page, format it at such.

Signed-off-by: Luc Van Oostenryck <luc.vanoostenryck@gmail.com>

--- a/Documentation/Makefile
+++ b/Documentation/Makefile
@@ -10,6 +10,7 @@ BUILDDIR      = build
 
 targets := help
 targets += html
+targets += man
 
 
 # Put it first so that "make" without argument is like "make help".
@@ -18,5 +19,8 @@ help:
 # route all targets to Sphinx using the new "make mode" option.
 $(targets): conf.py Makefile
 	@$(SPHINXBUILD) -M  $@  "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS)
+
+%.1: %.md man
+	@mv build/man/$@ $@
 
 .PHONY: Makefile	# avoid circular deps with the catch-all rule
