doc: use reST for manpages
MarkDown is really nice and easy to get something quickly but
for manpages, the rendering is not really nice and lack index entries.

reST has a special syntax for option lists but:
1) not all option syntax are recognized (for example when we use [xyz] to
  to show that xyz is optionnal).
2) when converted to HTML, a table is used for the list but:
  * options that are too long break the presentation
  * unrecognized options break the table
3) the options are also not put in the index

Solve this by using reST with '.. option::' directives.

Signed-off-by: Luc Van Oostenryck <luc.vanoostenryck@gmail.com>

--- a/Documentation/Makefile
+++ b/Documentation/Makefile
@@ -20,7 +20,7 @@ help:
 $(targets): conf.py Makefile
 	@$(SPHINXBUILD) -M  $@  "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS)
 
-%.1: %.md man
+%.1: %.rst man
 	@mv build/man/$@ $@
 
 .PHONY: Makefile	# avoid circular deps with the catch-all rule
